[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["Jayant Chauhan <developer@jayantchauhan.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pylint = "^2.17.2"
pydantic = "^1.10.7"
pre-commit = "^3.2.2"


[tool.poetry.group.dev.dependencies]
autohooks = "^23.4.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-pylint = "^22.8.1"


[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pylint"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
